--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "deno.enable": true,
     "deno.lint": true,
+    "deno.unstable": ["kv"],
     "editor.defaultFormatter": "denoland.vscode-deno",
     "[typescriptreact]": {
         "editor.defaultFormatter": "denoland.vscode-deno"
