--- a/deno.json
+++ b/deno.json
@@ -9,27 +9,36 @@
     },
     "lint": {
         "rules": {
-            "tags": ["fresh", "recommended"]
+            "tags": ["fresh", "recommended"],
+            "exclude": ["require-await"]
         }
     },
     "fmt": { "indentWidth": 4 },
     "exclude": ["**/_fresh/*"],
     "imports": {
         "@/": "./",
+        "@trpc/client": "npm:@trpc/client@^11.7.2",
+        "@trpc/server": "npm:@trpc/server@^11.7.2",
         "fresh": "jsr:@fresh/core@^2.2.0",
         "preact": "npm:preact@^10.27.2",
         "@preact/signals": "npm:@preact/signals@^2.5.0",
         "@fresh/plugin-vite": "jsr:@fresh/plugin-vite@^1.0.0",
         "vite": "npm:vite@^7.1.3",
         "tailwindcss": "npm:tailwindcss@^4.1.10",
-        "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.12"
+        "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.12",
+        "zod": "npm:zod@^4.1.13"
     },
     "compilerOptions": {
-        "lib": ["dom", "dom.asynciterable", "dom.iterable", "deno.ns"],
+        "lib": [
+            "dom",
+            "dom.asynciterable",
+            "dom.iterable",
+            "deno.ns",
+            "deno.unstable"
+        ],
         "jsx": "precompile",
         "jsxImportSource": "preact",
         "jsxPrecompileSkipElements": [
-            "a",
             "img",
             "source",
             "body",
