--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,68 +1,68 @@
 {
-  "name": "Lang Master - 日语N5测验",
-  "short_name": "Lang Master",
-  "description": "通过互动测验练习日语JLPT N5级别，涵盖词汇、语法、汉字和阅读理解。",
-  "start_url": "/",
-  "display": "fullscreen",
-  "display_override": ["window-controls-overlay", "fullscreen"],
-  "orientation": "portrait",
-  "background_color": "#00ff00",
-  "theme_color": "#a855f7",
-  "icons": [
-    {
-      "src": "icons/icon-48x48.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "categories": ["education", "productivity"],
-  "lang": "zh-CN",
-  "dir": "ltr",
-  "scope": "/",
-  "prefer_related_applications": false
+    "name": "外语邪修 - 日语N5测验",
+    "short_name": "外语邪修",
+    "description": "通过互动测验练习日语JLPT N5级别，涵盖词汇、语法、汉字和阅读理解。",
+    "start_url": "/",
+    "display": "standalone",
+    "display_override": ["standalone"],
+    "orientation": "portrait",
+    "background_color": "#00ff00",
+    "theme_color": "#a855f7",
+    "icons": [
+        {
+            "src": "icons/icon-48x48.png",
+            "sizes": "48x48",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-128x128.png",
+            "sizes": "128x128",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-256x256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "categories": ["education", "productivity"],
+    "lang": "zh-CN",
+    "dir": "ltr",
+    "scope": "/",
+    "prefer_related_applications": false
 }
