--- a/deno.json
+++ b/deno.json
@@ -10,13 +10,15 @@
     "lint": {
         "rules": {
             "tags": ["fresh", "recommended"],
-            "exclude": ["require-await"]
+            "exclude": ["require-await", "jsx-button-has-type"]
         }
     },
     "fmt": { "indentWidth": 4 },
     "exclude": ["**/_fresh/*"],
     "imports": {
         "@/": "./",
+        "@libsql/client": "npm:@libsql/client@^0.15.15",
+        "@std/ulid": "jsr:@std/ulid@^1.0.0",
         "@trpc/client": "npm:@trpc/client@^11.7.2",
         "@trpc/server": "npm:@trpc/server@^11.7.2",
         "fresh": "jsr:@fresh/core@^2.2.0",
