--- a/deno.json
+++ b/deno.json
@@ -19,6 +19,7 @@
         "@/": "./",
         "@libsql/client": "npm:@libsql/client@^0.15.15",
         "@libsql/linux-x64-gnu": "npm:@libsql/linux-x64-gnu@^0.5.22",
+        "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@^1.23.0",
         "@std/ulid": "jsr:@std/ulid@^1.0.0",
         "@trpc/client": "npm:@trpc/client@^11.7.2",
         "@trpc/server": "npm:@trpc/server@^11.7.2",
