add more quizzes to db

--- a/deno.json
+++ b/deno.json
@@ -10,7 +10,11 @@
     "lint": {
         "rules": {
             "tags": ["fresh", "recommended"],
-            "exclude": ["require-await", "jsx-button-has-type"]
+            "exclude": [
+                "require-await",
+                "jsx-button-has-type",
+                "no-unused-vars"
+            ]
         }
     },
     "fmt": { "indentWidth": 4 },
